k8s/02-backend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundry-backend
  namespace: apps
  labels:
    app: foundry-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foundry-backend
  template:
    metadata:
      labels:
        app: foundry-backend
    spec:
      serviceAccountName: foundry-backend-sa
      nodeSelector:
        role: apps
      containers:
      - name: backend
        image: parkheejun/foundry-backend:v1.0-202602030950
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: foundry-backend-svc
  namespace: apps
spec:
  selector:
    app: foundry-backend
  ports:
    - port: 80
      targetPort: 8080
