k8s/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundry-frontend
  namespace: apps
  labels:
    app: foundry-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foundry-frontend
  template:
    metadata:
      labels:
        app: foundry-frontend
    spec:
      nodeSelector:
        role: apps
      containers:
      - name: frontend
        image: parkheejun/foundry-frontend:v0.8
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: nginx-conf
        configMap:
          name: frontend-nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: foundry-frontend-svc
  namespace: apps
spec:
  selector:
    app: foundry-frontend
  ports:
    - port: 80
      targetPort: 80
