k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - foundry.heejunp.com
    secretName: foundry-tls-secret
  rules:
  - host: foundry.heejunp.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: foundry-backend-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foundry-frontend-svc
            port:
              number: 80
